feat: projects and update info

--- a/portifolio/package.json
+++ b/portifolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portifolio",
-  "homepage": "https://willianad.github.io/home-portifolio/",
+  "homepage": "https://willianad.github.io/portifolio/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
